--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -2,35 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Primary Meta Tags -->
-    <title>Reorg</title>
-    <meta name="title" content="Reorg - Asset Tokenization Platform" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta
-      name="description"
-      content="Raise funds for your startup by tokenizing ownership with Reorg"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=no"
     />
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://Reorg.tefro.tech" />
-    <meta property="og:title" content="Reorg" />
+    <meta name="description" content="reorg. ・ asset tokenization platform" />
     <meta
-      property="og:description"
-      content="Raise funds for your startup by tokenizing ownership with Reorg"
+      property="og:image"
+      content="https://github.com/mburuanthony/spell-checker/assets/76121306/f9ecb5dc-12bf-4673-9211-29f00ad4edf6"
     />
-    <meta property="og:image" content="https://your-image-url.jpg" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://Reorg.tefro.tech" />
-    <meta name="twitter:title" content="Reorg" />
+    <meta
+      property="og:image:alt"
+      content="reorg. ・ asset tokenization platform"
+    />
+    <meta property="og:site_name" content="reorg" />
+    <meta
+      property="og:url"
+      content="https://ieffn-gaaaa-aaaap-qhkwa-cai.icp0.io/"
+    />
+    <meta
+      name="twitter:image:src"
+      content="https://github.com/mburuanthony/spell-checker/assets/76121306/f9ecb5dc-12bf-4673-9211-29f00ad4edf6"
+    />
+    <meta name="twitter:title" content="reorg" />
     <meta
       name="twitter:description"
-      content="Raise funds for your startup by tokenizing ownership with Reorg"
+      content="reorg. ・ asset tokenization platform"
     />
-    <meta name="twitter:image" content="https://your-image-url.jpg" />
+    <meta name="twitter:site" content="reorg" />
+    <meta name="twitter:card" content="summary" />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/images/logo.png"
+      type="image/x-icon"
+    />
+    <title>reorg.</title>
   </head>
   <body>
     <div id="root"></div>
