--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -8,7 +8,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=no"
     />
-    <meta name="description" content="reorg. ・ asset tokenization platform" />
+    <meta
+      name="description"
+      content="reorg. ・ Token launch made simple. Trade, liquidity, funding. All in one place"
+    />
     <meta
       property="og:image"
       content="https://github.com/mburuanthony/spell-checker/assets/76121306/f9ecb5dc-12bf-4673-9211-29f00ad4edf6"
