--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -41,6 +41,7 @@
       href="./src/assets/images/logo.png"
       type="image/x-icon"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>reorg.</title>
   </head>
   <body>
