Change color theme

--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="description"
-      content="reorg. ・ Token launch made simple. Trade, liquidity, funding. All in one place"
+      content="REORG. ・ Token launch made simple. Trade, liquidity, funding. All in one place"
     />
     <meta
       property="og:image"
@@ -20,7 +20,7 @@
       property="og:image:alt"
       content="reorg. ・ asset tokenization platform"
     />
-    <meta property="og:site_name" content="reorg" />
+    <meta property="og:site_name" content="REORG." />
     <meta
       property="og:url"
       content="https://ieffn-gaaaa-aaaap-qhkwa-cai.icp0.io/"
@@ -29,22 +29,21 @@
       name="twitter:image:src"
       content="https://github.com/mburuanthony/spell-checker/assets/76121306/f9ecb5dc-12bf-4673-9211-29f00ad4edf6"
     />
-    <meta name="twitter:title" content="reorg" />
+    <meta name="twitter:title" content="REORG." />
     <meta
       name="twitter:description"
       content="reorg. ・ asset tokenization platform"
     />
-    <meta name="twitter:site" content="reorg" />
+    <meta name="twitter:site" content="REORG." />
     <meta name="twitter:card" content="summary" />
-    <link
-      rel="shortcut icon"
-      href="./src/assets/images/logo.png"
-      type="image/x-icon"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <title>reorg.</title>
+    <title>REORG.</title>
   </head>
-  <body>
+  <body class="bg-emerald-950">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
