--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -43,7 +43,9 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>REORG.</title>
   </head>
-  <body class="bg-emerald-950">
+  <body class="bg-emerald-950"
+  
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
