fixed the branding

--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/mburuanthony/spell-checker/assets/76121306/f9ecb5dc-12bf-4673-9211-29f00ad4edf6"
+      content="https://reorg.network/images/logo.png"
     />
     <meta
       property="og:image:alt"
