--- a/src/Quillo_frontend/index.html
+++ b/src/Quillo_frontend/index.html
@@ -41,6 +41,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
     <title>REORG.</title>
   </head>
 
